--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -1,4 +1,4 @@
-welcome=Welcome To Narsi Medilab Pet-Clinic
+welcome=Welcome To Narsi Super Medilab Pet-Clinic
 required=is required
 notFound=has not been found
 duplicate=is already in use
